# wildcatSTK

./: CMakeLists.txt  README.md  coverage_script.sh  wildcatSTKCoreIncludes.h
Common/: Common.h  Concepts.h
Common/Auxiliary/: AuxiliaryVariable.cpp  AuxiliaryVariable.h  FormulaVariable.cpp  FormulaVariable.h
Common/Config/: ConfigModelSpec.cpp  ConfigModelSpec.h  ConfigVariable.cpp  ConfigVariable.h  CurveModelDef.cpp  CurveModelDef.h
Common/Math/: Math.h
Common/Math/Interpolation/: Interpolator.cpp  Interpolator.h  LinearInterpolator.cpp  LinearInterpolator.h  NaturalCubicSplineInterpolator.cpp  NaturalCubicSplineInterpolator.h
Common/Math/LinearAlgebra/: MatrixDecompose.cpp  MatrixDecompose.h
Common/Math/MLRegression/: RegressionModel.cpp  RegressionModel.h
Common/Math/Relative/: RelativeModel.cpp  RelativeModel.h
Common/Math/Statistics/: Stat.cpp  Stat.h
Common/Seasonality/: SeasonalDecompose.cpp  SeasonalDecompose.h
Common/Types/: ConfigMap.cpp  ConfigMap.h  ConfigModelSpecTable.cpp  ConfigModelSpecTable.h  ConfigVariable.cpp  ConfigVariable.h  DataSet.cpp  DataSet.h  TimeSeries.cpp  TimeSeries.h
Common/Utils/: Tools.cpp  Tools.h
Common/Utils/General/: AlgebraicExpressionInterpreter.cpp  AlgebraicExpressionInterpreter.h  Tools.cpp  Tools.h
Common/Utils/IO/: CSVParser.cpp  CSVParser.h  JSONParser.cpp  JSONParser.h
Concepts/: Concepts.h
Global/: Global.h
Global/Mappings/: FactoryMappings.cpp  FactoryMappings.h
Global/Symbols/: AlgebraicOperatorSymbols.cpp  AlgebraicOperatorSymbols.h
UnitTests/: UnitTestsTypes.cpp  UnitTests_Auxiliary.cpp  UnitTests_Config.cpp  UnitTests_Math.cpp  UnitTests_Seasonality.cpp  UnitTests_Utils.cpp  Utils.h
UnitTests/Inputs/: MA_data_test.txt  readJSON_data_test.json
UnitTests/JSONSerialiser/: JSONExcelDataSerialiser.py
UnitTests/JSONSerialiser/ExcelInputs/: curveModelDef_data_test.xlsx  readJSON_data_test.xlsx  sample_constraints_clean.xlsx  sample_dataSet_clean.xlsx
UnitTests/JSONSerialiser/JSONOutputs/: curveModelDef_data_test.json  sample_constraints_clean.json  sample_dataSet_clean.json
UnitTests/Outputs/Actual/: writeJSON_data_test.json
UnitTests/Outputs/Expected/: CMA_happyPath_expected.txt  Conv_filter_mult_seas_happyPath_expected.txt  Conv_filter_mult_td_happyPath_expected.txt  Conv_filter_seas_happyPath_expected.txt  Conv_filter_td_happyPath_expected.txt  MA_happyPath_expected.txt
